--- a/fuzzylite/CMakeLists.txt
+++ b/fuzzylite/CMakeLists.txt
@@ -23,7 +23,7 @@ add_definitions(-DFL_DATE="${FL_DATE}")
 set(FL_VERSION 2.0)
 add_definitions(-DFL_VERSION="${FL_VERSION}")
 
-message("fuzzylite v.${FL_VERSION}-${FL_DATE}")
+message("fuzzylite v.${FL_VERSION}b${FL_DATE}")
 
 option(FL_USE_FLOAT "Use fl::scalar as float" OFF)
 option(FL_USE_LOG "Enable the macro FL_LOG to print information" ON)
