Adding support for Qt5

--- a/qtfuzzylite/CMakeLists.txt
+++ b/qtfuzzylite/CMakeLists.txt
@@ -29,6 +29,7 @@ set(FLQT_FULLNAME "qtfuzzylite-${FLQT_LONG_VERSION}")
 option(FL_USE_FLOAT "Use fl::scalar as float" OFF)
 option(FL_USE_LOG "Enable the macro FL_LOG to print information" ON)
 option(FL_DEBUG "Enable additional debugging information" OFF)
+option(FL_USE_QT5 "Utilize Qt5 instead of Qt4" OFF)
 
 message("CMAKE_SOURCE_DIR=${CMAKE_SOURCE_DIR}")
 if(FL_DEBUG)
@@ -53,19 +54,12 @@ if(NOT FL_USE_LOG)
 endif(NOT FL_USE_LOG)
 
 
-
-find_package(Qt4 REQUIRED)
-
-include(${QT_USE_FILE})
-add_definitions(${QT_DEFINITIONS})
-
 if(WIN32)
     message("Windows")
 	add_definitions(-DFL_WINDOWS)
 endif()
 
 include_directories(. ${CMAKE_SOURCE_DIR}/../fuzzylite)
-
 
 
 set(qtfl-headers
@@ -102,11 +96,8 @@ set(qtfl-uis
     ui/Viewer.ui
     ui/Window.ui
     ui/Wizard.ui)
+   
 
-
-qt4_wrap_cpp(qtfl-output ${qtfl-headers})
-qt4_wrap_ui(qtfl-output  ${qtfl-uis})
-qt4_add_resources(qtfl-output ui/qtfuzzylite.qrc)
 
 if(APPLE)
     set(qtfl-icon ${CMAKE_CURRENT_SOURCE_DIR}/ui/icons/qtfuzzylite.icns)
@@ -119,14 +110,74 @@ if(WIN32)
 endif()
 
 
+if(FL_USE_QT5)
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
+set(CMAKE_AUTOMOC ON)
+find_package(Qt5Widgets REQUIRED)
+#find_package(Qt5Core REQUIRED)
+#find_package(Qt5WebKit REQUIRED)
+
+link_libraries( ${QT_LIBRARIES} )
+if(WIN32)
+        link_libraries( ${QT_QTMAIN_LIBRARY} )
+endif(WIN32)
+
+
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Qt5Widgets_EXECUTABLE_COMPILE_FLAGS}")
+qt5_wrap_ui(qtfl-output  ${qtfl-uis})
+qt5_add_resources(qtfl-output ui/qtfuzzylite.qrc)
+
 add_executable(qtfuzzylite
                 MACOSX_BUNDLE
                 WIN32
                 ${qtfl-sources} ${qtfl-output}
                 #for the ide
-                ${qtfl-headers} ${qtfl-uis} ${qtfl-mocs} ${qtfl-res})
+                ${qtfl-headers} ${qtfl-uis})
+set_target_properties(qtfuzzylite PROPERTIES DEBUG_POSTFIX -dbg)
+
+qt5_use_modules(qtfuzzylite Widgets)
+target_link_libraries(qtfuzzylite ${fl-shared${FL_CONF}})
+
+#find_package(Qt5Core REQUIRED)
+#find_package(Qt5Widgets REQUIRED)
+#set(CMAKE_AUTOMOC ON)
+
+#add_definitions(${Qt5Widgets_DEFINITIONS})
+#include_directories(${Qt5Widgets_INCLUDE_DIRS})
+#target_link_libraries(qtfuzzylite ${fl-shared${FL_CONF}} ${Qt5Widgets_LIBRARIES})
+
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Qt5Widgets_EXECUTABLE_COMPILE_FLAGS}")
+
+#qt5_wrap_cpp(qtfl-output ${qtfl-headers})
+#qt5_wrap_ui(qtfl-output  ${qtfl-uis})
+#qt5_add_resources(qtfl-output ui/qtfuzzylite.qrc)
+
+
+
+
+else()
+
+find_package(Qt4 REQUIRED)
+
+add_definitions(${QT_DEFINITIONS})
+include(${QT_USE_FILE})
+
+qt4_wrap_cpp(qtfl-output ${qtfl-headers})
+qt4_wrap_ui(qtfl-output  ${qtfl-uis})
+qt4_add_resources(qtfl-output ui/qtfuzzylite.qrc)
+
+add_executable(qtfuzzylite
+                MACOSX_BUNDLE
+                WIN32
+                ${qtfl-sources} ${qtfl-output}
+                #for the ide
+                ${qtfl-headers} ${qtfl-uis})
 set_target_properties(qtfuzzylite PROPERTIES DEBUG_POSTFIX -dbg)
 target_link_libraries(qtfuzzylite ${QT_LIBRARIES} ${fl-shared${FL_CONF}})
+
+endif()
+
+
 
 if(APPLE)
     set_target_properties(qtfuzzylite PROPERTIES
@@ -164,6 +215,7 @@ message("${FLQT_FULLNAME}\n")
 message("FL_DEBUG=${FL_DEBUG}")
 message("FL_USE_LOG=${FL_USE_LOG}")
 message("FL_USE_FLOAT=${FL_USE_FLOAT}")
+message("FL_USE_QT5=${FL_USE_QT5}")
 message("fuzzylite=${fl-shared}${FL_CONF}")
 message("=====================================\n")
 
