--- a/qtfuzzylite/CMakeLists.txt
+++ b/qtfuzzylite/CMakeLists.txt
@@ -17,10 +17,11 @@ MACRO (TODAY RESULT)
     ENDIF (WIN32)
 ENDMACRO (TODAY)
 
-TODAY(FLQT_DATE)
+#TODAY(FLQT_DATE)
+set(FLQT_DATE 1305)
 add_definitions(-DFLQT_DATE="${FLQT_DATE}")
 
-set(FLQT_VERSION 2.0)
+set(FLQT_VERSION 2.5)
 add_definitions(-DFLQT_VERSION="${FLQT_VERSION}")
 
 set(FLQT_LONG_VERSION "${FLQT_VERSION}b${FLQT_DATE}")
