Added FL_EXPORT to template specializations. Compiling fine in Windows

--- a/fuzzylite/CMakeLists.txt
+++ b/fuzzylite/CMakeLists.txt
@@ -61,7 +61,7 @@ endif(NOT APPLE)
 elseif(WIN32)
     add_definitions(-DFL_WINDOWS)
 	#http://msdn.microsoft.com/en-us/library/thxezb7y.aspx
-    set(CMAKE_CXX_FLAGS " /W4 /EHsc")
+    set(CMAKE_CXX_FLAGS " /WX /W4 /EHsc")
     set(FL_LIBS dbghelp)
 endif(UNIX)
 
