--- a/qtfuzzylite/CMakeLists.txt
+++ b/qtfuzzylite/CMakeLists.txt
@@ -4,21 +4,21 @@ project(qtfuzzylite CXX)
 
 set(CMAKE_VERBOSE_MAKEFILE true)
 
-MACRO (TODAY RESULT)
-    IF (WIN32)
-        EXECUTE_PROCESS(COMMAND "cmd" " /C date /T" OUTPUT_VARIABLE ${RESULT})
-        string(REGEX REPLACE ".*../(..)/..(..).*" "\\2\\1" ${RESULT} ${${RESULT}})
-    ELSEIF(UNIX)
-        EXECUTE_PROCESS(COMMAND "date" "+%d/%m/%Y" OUTPUT_VARIABLE ${RESULT})
-        string(REGEX REPLACE ".*../(..)/..(..).*" "\\2\\1" ${RESULT} ${${RESULT}})
-    ELSE ()
-        MESSAGE(SEND_ERROR "date not implemented")
-        SET(${RESULT} 000000)
-    ENDIF (WIN32)
-ENDMACRO (TODAY)
+#MACRO (TODAY RESULT)
+    #IF (WIN32)
+        #EXECUTE_PROCESS(COMMAND "cmd" " /C date /T" OUTPUT_VARIABLE ${RESULT})
+        #string(REGEX REPLACE ".*../(..)/..(..).*" "\\2\\1" ${RESULT} ${${RESULT}})
+    #ELSEIF(UNIX)
+        #EXECUTE_PROCESS(COMMAND "date" "+%d/%m/%Y" OUTPUT_VARIABLE ${RESULT})
+        #string(REGEX REPLACE ".*../(..)/..(..).*" "\\2\\1" ${RESULT} ${${RESULT}})
+    #ELSE ()
+        #MESSAGE(SEND_ERROR "date not implemented")
+        #SET(${RESULT} 000000)
+    #ENDIF (WIN32)
+#ENDMACRO (TODAY)
+#TODAY(FLQT_DATE)
 
-TODAY(FLQT_DATE)
-add_definitions(-DFLQT_DATE="${FLQT_DATE}")
+add_definitions(-DFLQT_DATE="1307")
 
 set(FLQT_VERSION 3.0)
 add_definitions(-DFLQT_VERSION="${FLQT_VERSION}")
@@ -34,6 +34,9 @@ option(FL_DEBUG "Enable additional debugging information" OFF)
 option(FL_USE_QT5 "Utilize Qt5 instead of Qt4" OFF)
 
 message("CMAKE_SOURCE_DIR=${CMAKE_SOURCE_DIR}")
+
+link_directories("${CMAKE_SOURCE_DIR}/../fuzzylite/lib")
+
 if(FL_DEBUG)
    set(CMAKE_BUILD_TYPE Debug)
    set(FL_CONF -dbg)
