--- a/fuzzylite/CMakeLists.txt
+++ b/fuzzylite/CMakeLists.txt
@@ -114,7 +114,7 @@ set_target_properties(fl-static PROPERTIES OUTPUT_NAME fuzzylite-static)
 target_link_libraries(fl-static ${FL_LIBS})
 
 add_executable(fl-bin src/main.cpp)
-set_target_properties(fl-bin PROPERTIES OUTPUT_NAME fuzzylite-demo)
+set_target_properties(fl-bin PROPERTIES OUTPUT_NAME fuzzylite-bin)
 set_target_properties(fl-bin PROPERTIES DEBUG_POSTFIX -dbg)
 target_link_libraries(fl-bin fl-shared ${FL_LIBS})
 
