--- a/fuzzylite/CMakeLists.txt
+++ b/fuzzylite/CMakeLists.txt
@@ -23,10 +23,11 @@ if (APPLE)
 endif()
 
 
-add_definitions(-DFL_DATE="1307")
-
 set(FL_VERSION 3.0)
 add_definitions(-DFL_VERSION="${FL_VERSION}")
+
+set(FL_DATE "1307")
+add_definitions(-DFL_DATE="1307")
 
 option(FL_USE_FLOAT "Use fl::scalar as float" OFF)
 option(FL_USE_LOG "Enable the macro FL_LOG to print information" ON)
