Moved library target from lib/ to bin/

--- a/fuzzylite/CMakeLists.txt
+++ b/fuzzylite/CMakeLists.txt
@@ -48,7 +48,7 @@ endif(FL_DEBUG)
 add_definitions(-DFL_BUILD_PATH="${CMAKE_SOURCE_DIR}") #used to determine FL__FILE__
 
 set(EXECUTABLE_OUTPUT_PATH bin)
-set(LIBRARY_OUTPUT_PATH lib)
+set(LIBRARY_OUTPUT_PATH bin)
 
 set(FL_LIBS)
 
@@ -105,20 +105,19 @@ target_link_libraries(fl-bin fl-shared ${FL_LIBS})
 
 install(TARGETS fl-bin fl-shared fl-static
 		RUNTIME DESTINATION bin
-		LIBRARY DESTINATION lib
-		ARCHIVE DESTINATION lib
+		LIBRARY DESTINATION bin
+		ARCHIVE DESTINATION bin
 		)
 
 install(DIRECTORY fl/ DESTINATION include/fl)
 
-if(WIN32)
-	set(fl-suffix)
-	
-	add_custom_command(TARGET fl-bin POST_BUILD 
-		COMMAND ${CMAKE_COMMAND} -E copy_if_different 
-        "${CMAKE_SOURCE_DIR}/lib/fuzzylite${FL_CONF}.dll"
-        ${CMAKE_SOURCE_DIR}/bin)                 # <--this is out-file path
-endif()
+#if(WIN32)
+#	set(fl-suffix)
+#	add_custom_command(TARGET fl-bin POST_BUILD 
+#		COMMAND ${CMAKE_COMMAND} -E copy_if_different 
+#        "${CMAKE_SOURCE_DIR}/lib/fuzzylite${FL_CONF}.dll"
+#        ${CMAKE_SOURCE_DIR}/bin)                 # <--this is out-file path
+#endif()
 
 message("=====================================")
 message("fuzzylite v.${FL_VERSION}b${FL_DATE}\n")
