Building in Windows. Tsukamoto example fixed

--- a/qtfuzzylite/CMakeLists.txt
+++ b/qtfuzzylite/CMakeLists.txt
@@ -36,7 +36,7 @@ add_definitions(-DFL_BUILD_PATH="${CMAKE_SOURCE_DIR}") #used to determine FL__FI
 
 option(FL_USE_FLOAT "Use fl::scalar as float" OFF)
 option(FL_DEBUG "Enable additional debugging information" OFF)
-option(FL_USE_QT4 "Utilize Qt4 instead of Qt5" ON)
+option(FL_USE_QT5 "Utilize Qt4 instead of Qt5" OFF)
 
 message("CMAKE_SOURCE_DIR=${CMAKE_SOURCE_DIR}")
 
@@ -113,29 +113,7 @@ if(WIN32)
 endif()
 
 
-if(FL_USE_QT4)
-
-find_package(Qt4 REQUIRED)
-
-add_definitions(${QT_DEFINITIONS})
-include(${QT_USE_FILE})
-
-qt4_wrap_cpp(qtfl-output ${qtfl-headers})
-qt4_wrap_ui(qtfl-output  ${qtfl-uis})
-qt4_add_resources(qtfl-output ui/qtfuzzylite.qrc)
-
-add_executable(qtfuzzylite
-                MACOSX_BUNDLE
-                WIN32
-                ${qtfl-sources} ${qtfl-output}
-                #for the ide
-                ${qtfl-headers} ${qtfl-uis})
-set_target_properties(qtfuzzylite PROPERTIES DEBUG_POSTFIX -dbg)
-target_link_libraries(qtfuzzylite ${QT_LIBRARIES} ${fl-shared${FL_CONF}})
-
-else()
-#Use Qt5
-
+if(FL_USE_QT5)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOMOC ON)
 find_package(Qt5Widgets REQUIRED)
@@ -159,6 +137,27 @@ set_target_properties(qtfuzzylite PROPERTIES DEBUG_POSTFIX -dbg)
 
 qt5_use_modules(qtfuzzylite Widgets)
 target_link_libraries(qtfuzzylite ${fl-shared${FL_CONF}})
+
+else()
+#Use Qt4
+find_package(Qt4 REQUIRED)
+
+add_definitions(${QT_DEFINITIONS})
+include(${QT_USE_FILE})
+
+qt4_wrap_cpp(qtfl-output ${qtfl-headers})
+qt4_wrap_ui(qtfl-output  ${qtfl-uis})
+qt4_add_resources(qtfl-output ui/qtfuzzylite.qrc)
+
+add_executable(qtfuzzylite
+                MACOSX_BUNDLE
+                WIN32
+                ${qtfl-sources} ${qtfl-output}
+                #for the ide
+                ${qtfl-headers} ${qtfl-uis})
+set_target_properties(qtfuzzylite PROPERTIES DEBUG_POSTFIX -dbg)
+target_link_libraries(qtfuzzylite ${QT_LIBRARIES} ${fl-shared${FL_CONF}})
+
 
 endif()
 
@@ -207,7 +206,7 @@ message("=====================================")
 message("${FLQT_FULLNAME}\n")
 message("FL_DEBUG=${FL_DEBUG}")
 message("FL_USE_FLOAT=${FL_USE_FLOAT}")
-message("FL_USE_QT4=${FL_USE_QT4}")
+message("FL_USE_QT5=${FL_USE_QT5}")
 message("fuzzylite=${fl-shared}${FL_CONF}")
 message("=====================================\n")
 
