Building on Mac

--- a/fuzzylite/CMakeLists.txt
+++ b/fuzzylite/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8)
 
 #in windows, cmake . -G "NMake Makefiles"
-
+#in unix, cmake . -G "Unix Makefiles"
 project(fuzzylite CXX)
 
 set(CMAKE_VERBOSE_MAKEFILE true)
