--- a/qtfuzzylite/CMakeLists.txt
+++ b/qtfuzzylite/CMakeLists.txt
@@ -165,14 +165,14 @@ endif()
 
 if(APPLE)
     set_target_properties(qtfuzzylite PROPERTIES
-    MACOSX_BUNDLE_INFO_STRING "${FLQT_FULLNAME}, Licensed under GNU GPL. Copyright © Juan Rada-Vilela, All Rights Reserved."
+    MACOSX_BUNDLE_INFO_STRING "${FLQT_FULLNAME} by Juan Rada-Vilela, licensed under the GNU GPL 3.0"
     MACOSX_BUNDLE_ICON_FILE qtfuzzylite.icns
     MACOSX_BUNDLE_GUI_IDENTIFIER "${PROJECT_NAME}"
     MACOSX_BUNDLE_BUNDLE_NAME "${PROJECT_NAME}"
     MACOSX_BUNDLE_BUNDLE_VERSION "${FLQT_DATE}"
     MACOSX_BUNDLE_LONG_VERSION_STRING "${FLQT_LONG_VERSION}"
     MACOSX_BUNDLE_SHORT_VERSION_STRING "${FLQT_VERSION}"
-    MACOSX_BUNDLE_COPYRIGHT "Copyright © 2013 Juan Rada-Vilela, Licensed under the GNU General Public License (GPL-2.0)"
+    MACOSX_BUNDLE_COPYRIGHT "Juan Rada-Vilela, Licensed under the GNU General Public License 3.0"
 )
     add_custom_target(  mac-deploy ALL
                         COMMAND ${QT_BINARY_DIR}/macdeployqt qtfuzzylite.app
